[package]
name = "get_files_macro"
version = "0.1.0"
edition = "2021"
description = "A Rust macro that can resolve a directory's file names before compile-time."
license= "MIT"
license-file = "LICENSE"
readme = "README.md"
authors = ["Torben Schweren"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.43"
