[package]
name = "get_files_macro"
version = "0.1.2"
edition = "2021"
description = "A Rust macro that can resolve a directory's file names before compile-time."
license= "MIT"
license-file = "LICENSE"
readme = "README.md"
authors = ["Torben Schweren"]
repository = "https://github.com/Kitt3120/get_files_macro"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.43"
